--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -129,6 +129,7 @@
     <Content Include="media\door.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\0002.gif" />
     <None Include="Resources\eyes.png" />
     <None Include="Resources\hide1.png" />
     <None Include="Resources\key %281%29.png" />
