--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="csConexion.cs" />
     <Compile Include="Equipos.cs">
       <SubType>Form</SubType>
     </Compile>
