--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -46,90 +46,66 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmAgregarJugadores.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmAgregarJugadores.Designer.cs">
-      <DependentUpon>FrmAgregarJugadores.cs</DependentUpon>
-    </Compile>
     <Compile Include="csConexion.cs" />
     <Compile Include="csCorreo.cs" />
     <Compile Include="csEncriptar.cs" />
-    <Compile Include="FrmEditarClave.cs">
+    <Compile Include="EditarClave.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmEditarClave.Designer.cs">
-      <DependentUpon>FrmEditarClave.cs</DependentUpon>
+    <Compile Include="EditarClave.Designer.cs">
+      <DependentUpon>EditarClave.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmEditarCorreo.cs">
+    <Compile Include="EditarCorreo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmEditarCorreo.Designer.cs">
-      <DependentUpon>FrmEditarCorreo.cs</DependentUpon>
+    <Compile Include="EditarCorreo.Designer.cs">
+      <DependentUpon>EditarCorreo.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmEditarjugador.cs">
+    <Compile Include="Equipos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmEditarjugador.Designer.cs">
-      <DependentUpon>FrmEditarjugador.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmEquipos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmEquipos.Designer.cs">
-      <DependentUpon>FrmEquipos.cs</DependentUpon>
+    <Compile Include="Equipos.Designer.cs">
+      <DependentUpon>Equipos.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuColorTable.cs" />
     <Compile Include="MenuRenderer.cs" />
     <Compile Include="RJDropDownMenu.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="FrmInicio.cs">
+    <Compile Include="Inicio.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmInicio.Designer.cs">
-      <DependentUpon>FrmInicio.cs</DependentUpon>
+    <Compile Include="Inicio.Designer.cs">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogin.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmLogin.Designer.cs">
-      <DependentUpon>FrmLogin.cs</DependentUpon>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FrmUsuarios.cs">
+    <Compile Include="Usuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmUsuarios.Designer.cs">
-      <DependentUpon>FrmUsuarios.cs</DependentUpon>
+    <Compile Include="Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmVerJugadores.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmVerJugadores.Designer.cs">
-      <DependentUpon>FrmVerJugadores.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="FrmAgregarJugadores.resx">
-      <DependentUpon>FrmAgregarJugadores.cs</DependentUpon>
+    <EmbeddedResource Include="EditarClave.resx">
+      <DependentUpon>EditarClave.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmEditarClave.resx">
-      <DependentUpon>FrmEditarClave.cs</DependentUpon>
+    <EmbeddedResource Include="EditarCorreo.resx">
+      <DependentUpon>EditarCorreo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmEditarCorreo.resx">
-      <DependentUpon>FrmEditarCorreo.cs</DependentUpon>
+    <EmbeddedResource Include="Equipos.resx">
+      <DependentUpon>Equipos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmEditarjugador.resx">
-      <DependentUpon>FrmEditarjugador.cs</DependentUpon>
+    <EmbeddedResource Include="Inicio.resx">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmEquipos.resx">
-      <DependentUpon>FrmEquipos.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmInicio.resx">
-      <DependentUpon>FrmInicio.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmLogin.resx">
-      <DependentUpon>FrmLogin.cs</DependentUpon>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -141,11 +117,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="FrmUsuarios.resx">
-      <DependentUpon>FrmUsuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmVerJugadores.resx">
-      <DependentUpon>FrmVerJugadores.cs</DependentUpon>
+    <EmbeddedResource Include="Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
