--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -46,9 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgregarJugadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarJugadores.Designer.cs">
+      <DependentUpon>AgregarJugadores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgregarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarUsuario.Designer.cs">
+      <DependentUpon>AgregarUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="csConexion.cs" />
     <Compile Include="csCorreo.cs" />
     <Compile Include="csEncriptar.cs" />
+    <Compile Include="csEntrenador.cs" />
     <Compile Include="EditarClave.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,11 +74,23 @@
     <Compile Include="EditarCorreo.Designer.cs">
       <DependentUpon>EditarCorreo.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditarJugador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarJugador.Designer.cs">
+      <DependentUpon>EditarJugador.cs</DependentUpon>
+    </Compile>
     <Compile Include="Equipos.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Equipos.Designer.cs">
       <DependentUpon>Equipos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEntrenadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEntrenadores.Designer.cs">
+      <DependentUpon>FrmEntrenadores.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuColorTable.cs" />
     <Compile Include="MenuRenderer.cs" />
@@ -92,14 +117,32 @@
     <Compile Include="Usuarios.Designer.cs">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="VerJugadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerJugadores.Designer.cs">
+      <DependentUpon>VerJugadores.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AgregarJugadores.resx">
+      <DependentUpon>AgregarJugadores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgregarUsuario.resx">
+      <DependentUpon>AgregarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditarClave.resx">
       <DependentUpon>EditarClave.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditarCorreo.resx">
       <DependentUpon>EditarCorreo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EditarJugador.resx">
+      <DependentUpon>EditarJugador.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Equipos.resx">
       <DependentUpon>Equipos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEntrenadores.resx">
+      <DependentUpon>FrmEntrenadores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
@@ -119,6 +162,9 @@
     </Compile>
     <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VerJugadores.resx">
+      <DependentUpon>VerJugadores.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
