--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -68,23 +68,11 @@
     <Compile Include="csCorreo.cs" />
     <Compile Include="csEncriptar.cs" />
     <Compile Include="csEntrenador.cs" />
-    <Compile Include="EditarClave.cs">
+    <Compile Include="editarjugador.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EditarClave.Designer.cs">
-      <DependentUpon>EditarClave.cs</DependentUpon>
-    </Compile>
-    <Compile Include="EditarCorreo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditarCorreo.Designer.cs">
-      <DependentUpon>EditarCorreo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="EditarJugador.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditarJugador.Designer.cs">
-      <DependentUpon>EditarJugador.cs</DependentUpon>
+    <Compile Include="editarjugador.Designer.cs">
+      <DependentUpon>editarjugador.cs</DependentUpon>
     </Compile>
     <Compile Include="Equipos.cs">
       <SubType>Form</SubType>
@@ -97,6 +85,18 @@
     </Compile>
     <Compile Include="FrmEntrenadores.Designer.cs">
       <DependentUpon>FrmEntrenadores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GestionUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GestionUsuario.Designer.cs">
+      <DependentUpon>GestionUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Jugador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Jugador.Designer.cs">
+      <DependentUpon>Jugador.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuColorTable.cs" />
     <Compile Include="MenuRenderer.cs" />
@@ -114,17 +114,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuarios.cs">
+    <Compile Include="verjugadores.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Usuarios.Designer.cs">
-      <DependentUpon>Usuarios.cs</DependentUpon>
-    </Compile>
-    <Compile Include="VerJugadores.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="VerJugadores.Designer.cs">
-      <DependentUpon>VerJugadores.cs</DependentUpon>
+    <Compile Include="verjugadores.Designer.cs">
+      <DependentUpon>verjugadores.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AgregarJugadores.resx">
       <DependentUpon>AgregarJugadores.cs</DependentUpon>
@@ -132,20 +126,20 @@
     <EmbeddedResource Include="AgregarUsuario.resx">
       <DependentUpon>AgregarUsuario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EditarClave.resx">
-      <DependentUpon>EditarClave.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EditarCorreo.resx">
-      <DependentUpon>EditarCorreo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EditarJugador.resx">
-      <DependentUpon>EditarJugador.cs</DependentUpon>
+    <EmbeddedResource Include="editarjugador.resx">
+      <DependentUpon>editarjugador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Equipos.resx">
       <DependentUpon>Equipos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEntrenadores.resx">
       <DependentUpon>FrmEntrenadores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GestionUsuario.resx">
+      <DependentUpon>GestionUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Jugador.resx">
+      <DependentUpon>Jugador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -163,11 +157,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Usuarios.resx">
-      <DependentUpon>Usuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="VerJugadores.resx">
-      <DependentUpon>VerJugadores.cs</DependentUpon>
+    <EmbeddedResource Include="verjugadores.resx">
+      <DependentUpon>verjugadores.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
