--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -242,7 +242,7 @@
     <Content Include="media\door.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\IconoLupa.png" />
+    <None Include="Resources\IconoLupa.png" />
     <None Include="Resources\football-arena-background.jpg" />
     <None Include="Resources\0002.gif" />
     <None Include="Resources\eyes.png" />
