--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -143,6 +143,12 @@
     <Compile Include="Form\VerEquipo.Designer.cs">
       <DependentUpon>VerEquipo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCambiarClave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambiarClave.Designer.cs">
+      <DependentUpon>frmCambiarClave.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\verjugadores.cs">
@@ -204,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\VerEquipo.resx">
       <DependentUpon>VerEquipo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCambiarClave.resx">
+      <DependentUpon>frmCambiarClave.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
