--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -53,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\csEntrenador.cs" />
+    <Compile Include="Class\csEquipo.cs" />
     <Compile Include="Class\csJugador.cs" />
     <Compile Include="Form\AggEquipo.cs">
       <SubType>Form</SubType>
@@ -99,12 +115,6 @@
     <Compile Include="Form\EditEntrenador.Designer.cs">
       <DependentUpon>EditEntrenador.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form\Entrenadores.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form\Entrenadores.Designer.cs">
-      <DependentUpon>Entrenadores.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form\GestionUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,20 +153,22 @@
     <Compile Include="Form\CambiarClave.Designer.cs">
       <DependentUpon>CambiarClave.cs</DependentUpon>
     </Compile>
+    <Compile Include="Class\Modo oscuro.cs" />
+    <Compile Include="Class\GlobalSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="usercontrol\UC_MisEquipos.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Form\Torneo.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="usercontrol\UC_MisEquipos.Designer.cs">
-      <DependentUpon>UC_MisEquipos.cs</DependentUpon>
+    <Compile Include="Form\Torneo.Designer.cs">
+      <DependentUpon>Torneo.cs</DependentUpon>
     </Compile>
-    <Compile Include="usercontrol\UC_TodosEquipos.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="usercontrol\UC_TodosEquipos.Designer.cs">
-      <DependentUpon>UC_TodosEquipos.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Form\AggEquipo.resx">
       <DependentUpon>AggEquipo.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,9 +190,6 @@
     <EmbeddedResource Include="Form\EditEntrenador.resx">
       <DependentUpon>EditEntrenador.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Entrenadores.resx">
-      <DependentUpon>Entrenadores.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form\GestionUsuario.resx">
       <DependentUpon>GestionUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,6 +208,9 @@
     <EmbeddedResource Include="Form\CambiarClave.resx">
       <DependentUpon>CambiarClave.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form\Torneo.resx">
+      <DependentUpon>Torneo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -209,27 +221,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="usercontrol\UC_MisEquipos.resx">
-      <DependentUpon>UC_MisEquipos.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="usercontrol\UC_TodosEquipos.resx">
-      <DependentUpon>UC_TodosEquipos.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Resources\close %281%29.png" />
   </ItemGroup>
   <ItemGroup>
@@ -278,6 +279,21 @@
     <Content Include="media\door.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\icons8-cucha-50 %281%29.png" />
+    <None Include="Resources\icons8-cucha-50.png" />
+    <None Include="Resources\fxfutxpertblanco.png" />
+    <None Include="Resources\icons8-luna-creciente-50 %281%29.png" />
+    <None Include="Resources\icons8-luna-creciente-50.png" />
+    <None Include="Resources\icons8-futbol-playa-50.png" />
+    <None Include="Resources\icons8-futbol-playa-30.png" />
+    <None Include="Resources\icons8-usuario-50.png" />
+    <None Include="Resources\icons8-male-teacher-64.png" />
+    <None Include="Resources\icons8-patrocinador-50.png" />
+    <None Include="Resources\icons8-organizador-80.png" />
+    <None Include="Resources\icons8-llamada-de-conferencia-64.png" />
+    <None Include="Resources\icons8-trofeo-50.png" />
+    <None Include="Resources\tournament %281%29.png" />
+    <None Include="Resources\tournament.png" />
     <None Include="Resources\IconoLupa.png" />
     <None Include="Resources\football-arena-background.jpg" />
     <None Include="Resources\0002.gif" />
@@ -286,6 +302,18 @@
     <None Include="Resources\key %281%29.png" />
     <None Include="Resources\userr.png" />
     <None Include="Resources\0002-0700 %28online-video-cutter.com%29%280%29.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
