--- a/TorneosFut.csproj
+++ b/TorneosFut.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="csDGV.cs" />
     <Compile Include="Form\AggTorneo.cs">
       <SubType>Form</SubType>
     </Compile>
